# libdatachannel-python

./: README  README.md  convert.tcl  generate.py  libdatachannel.py  libdatachannel_inc.py  media_receiver.py  pyproject.toml  setup.py  tests.py
examples/media_receiver/: README.md  media_receiver.py
src/libdatachannel/: __init__.py  libdatachannel_build.py
