[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libdatachannel"
version = "0.0.1"
authors = [
  { name="wusspuss", email="wuss.puss@yandex.ru" },
]
description = "Bindings for libdatachannel"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cffi",
]
[project.urls]
"Homepage" = "https://github.com/wusspuss/libdatachannel-python"
"Bug Tracker" = "https://github.com/wusspuss/libdatachannel-python/issues"
